Jpa p2
