# src/main/java/com/example/samplecode/dto/response/PageResponse.java
@@ -1,0 +1,15 @@
+package com.example.samplecode.dto.response;
+
+import lombok.Builder;
+import lombok.Getter;
+
+import java.io.Serializable;
+
+@Getter
+@Builder
+public class PageResponse<T> implements Serializable {
+    private int pageNo;
+    private int pageSize;
+    private int totalPage;
+    private T items;
+}
